--- a/src/ios/GoogleService-Info.plist
+++ b/src/ios/GoogleService-Info.plist
@@ -2,5 +2,39 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
+	<string>ca-app-pub-3940256099942544/2934735716</string>
+	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
+	<string>ca-app-pub-3940256099942544/4411468910</string>
+	<key>CLIENT_ID</key>
+	<string>175150972110-othh26sqcvvmuu53r5ofpf69q9edofou.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.175150972110-othh26sqcvvmuu53r5ofpf69q9edofou</string>
+	<key>API_KEY</key>
+	<string>AIzaSyDnEUvVV8dAxBrvTmmkecS8mzT9HDAuy_k</string>
+	<key>GCM_SENDER_ID</key>
+	<string>175150972110</string>
+	<key>PLIST_VERSION</key>
+	<string>1</string>
+	<key>BUNDLE_ID</key>
+	<string>it.nlv.mobile</string>
+	<key>PROJECT_ID</key>
+	<string>nlv-group</string>
+	<key>STORAGE_BUCKET</key>
+	<string>nlv-group.appspot.com</string>
+	<key>IS_ADS_ENABLED</key>
+	<true></true>
+	<key>IS_ANALYTICS_ENABLED</key>
+	<false></false>
+	<key>IS_APPINVITE_ENABLED</key>
+	<false></false>
+	<key>IS_GCM_ENABLED</key>
+	<true></true>
+	<key>IS_SIGNIN_ENABLED</key>
+	<true></true>
+	<key>GOOGLE_APP_ID</key>
+	<string>1:175150972110:ios:a6dc01148913d92a</string>
+	<key>DATABASE_URL</key>
+	<string>https://nlv-group.firebaseio.com</string>
 </dict>
 </plist>
